src/css/styles.css
html, body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
}

:root {
  font-size: 14px;
}

body {
  font-family: "Google Sans", sans-serif;
  font-size: 1rem;
  color: #637282;
  overflow-x: hidden;
  font-weight: normal;
  letter-spacing: -.3px;
}

#particles-js canvas {
    display: block;
    vertical-align: bottom;
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
    opacity: 1;
    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
    transition: opacity .8s ease, transform 1.4s ease
}

#particles-js {
    width: 45%;
    height: 60%;
    position: absolute;
    z-index: -10;
    top: 20%;
    left:50%
}

.has-sticky-header {
  padding-top: 72px;
}
first-letter {
  color: #557DBF;
  font-weight: 400
}

second-letter {
  color: #FBBC12;
  font-weight: 400;
}

third-letter {
  color: #E1382B;
  font-weight: 400;
}

forth-letter {
  color: #189E59;
  font-weight: 400;
}
a {
  line-height: 1;
  color: #2F5BE7;
}

button, .btn {
  outline: none  ;
  border: 0  ;
}

button:focus, .btn:focus {
  -webkit-box-shadow: none  ;
  box-shadow: none  ;
}


h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6 {
  color: #1B2733;
  font-family: "Google Sans", sans-serif;
  font-weight: 700;
}

h2{
  font-size: 25px
}
h1 {
  line-height: 32px;
}

h2, .h2 {
  line-height: 1.44;
}

p {
  font-size: 14px;
  line-height: 22px;
}

.lead {
  font-weight: normal;
  line-height: 29px;
  text-align: left;
}
@media only screen and (max-width: 600px){
  .lead{
    font-size: 16px;
  }
  .vanish{
    display: none;
  }
  .zuri{
    text-align: left;
    line-height: 1.5;
  }
}

.text-warning {
  color: #FD7D44  ;
}

.content {
  padding-top: 100px;
  padding-bottom: 100px;
}

.container {
  max-width: 1100px;
  width: 100%;
  padding-right: 20px;
  padding-left: 20px;
}

.section-spacer {
  padding: 100px 0;
}

.cta__large {
  max-width: 450px;
}

.section-header {
  margin-bottom: 50px;
  padding-right: 10px;
  padding-left: 10px;
}

.section-title {
  text-transform: capitalize;
}
.section-title-custom{
  text-transform: none;
}

.section-subtitle {
  font-size: 15px;
  color: #637282;
}

.assistive-text {
  font-size: 12px;
}

.list-circle {
  list-style-type: none;
  padding: 0;
}

.list-circle li {
  position: relative;
  font-size: 16px;
  font-weight: 500;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  margin-bottom: 15px;
}

.list-circle li:last-child {
  margin: 0  ;
}

.list-circle li:before {
  content: '';
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: rgba(47, 91, 231, 0.8);
  -webkit-box-shadow: 0 0 0 7px rgba(47, 91, 231, 0.1);
  box-shadow: 0 0 0 7px rgba(47, 91, 231, 0.1);
  display: inline-block;
  margin-right: 20px;
  vertical-align: middle;
}

#loading {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: #fff;
  z-index: 10000;
}

#loading .ripple {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  position: absolute;
  top: calc(50% - 30px);
  left: calc(50% - 30px);
  -webkit-animation-name: ripple;
  animation-name: ripple;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  animation-direction: alternate-reverse;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-transform: scale(0);
  transform: scale(0);
  opacity: 0.6;
}

#loading .ripple1 {
  background-color: rgba(47, 231, 177, 0.4);
}

#loading .ripple2 {
  -webkit-animation-delay: -250ms;
  animation-delay: -250ms;
  background-color: rgba(47, 231, 177, 0.5);
}

#loading .ripple3 {
  -webkit-animation-delay: -500ms;
  animation-delay: -500ms;
  background-color: rgba(47, 91, 231, 0.6);
}

#loading .ripple4 {
  -webkit-animation-delay: -750ms;
  animation-delay: -750ms;
  background-color: #2F5BE7;
}

@-webkit-keyframes ripple {
  to {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@keyframes ripple {
  to {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

.btn {
  padding: 8px 20px;
  border: 0;
  color: #1B2733;
  -webkit-transition: all .5s ease-in-out;
  transition: all .5s ease-in-out;
  line-height: 24px;
  font-weight: 700;
  border-radius: 2px;
  font-family: "Google Sans", sans-serif;
}

.btn-default {
  background: #fff;
  color: #637282;
}

.btn-default:hover, .btn-default:focus, .btn-default:visited {
  color: #1B2733;
}

.btn-primary {
  background: #3BC1FD;
  color: #1B2733;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:visited {

  background: #3BC1FD;
  color: #FFFFFF;

}

.btn-secondary {
  background: #2F5BE7;
  color: #fff;
  font-weight: 200;
  font-size: 16px;
}

.btn-secondary:hover, .btn-secondary:focus, .btn-secondary:visited {
  background-color: #153bb5;
  color: #8af2d3;
  -webkit-box-shadow: -5px 5px 0 rgba(47, 231, 177, 0.8);
  box-shadow: -5px 5px 0 rgba(47, 231, 177, 0.8);
}

.btn-link {
  padding: 0;
}

.btn-link .icon {
  margin-left: 10px;
  display: inline-block;
  vertical-align: middle;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

.btn-link:hover {
  text-decoration: none;
}

.btn-link:hover .icon {
  margin-left: 15px;
}

.btn-link--primary {
  color: #3BC1FD;
}

.btn-link--secondary {
  color: #2F5BE7;
}

.btn-lg {
  font-size: 18px;
  padding: 10px 20px;
}

.btn-cta {
  max-width: 250px;
  width: 100%;
  font-size: 18px;
  padding: 15px 20px;
}

.btn-has-icon {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.btn-has-icon .u-icon {
  text-align: center;
}

.icon-on__left .u-icon {
  margin-right: 10px;
}

.btn-pills {
  border-radius: 50px;
}
/* ... */

